# CS240_Course_Project

./: .gitignore  Announcement .md  Announcement.zh.md  Announcement.zh.tex  Presentation.tex  Presentation.zh.tex  Proposal.tex  Proposal.zh.tex  README.md  README.zh.md  Report.tex  Report.zh.tex  pyproject.toml  reference_extraction.tex  reference_extraction.zh.tex  requirements.txt
outputs/: partition_results.csv
outputs/influence_maximization/: influence_results.csv
reference_text_extracted/: Barik2025_GreediRIS.txt  Chen2024_Scalable_Distributed_Algorithms.txt  Kempe2003_Influence_Maximization.txt  Leskovec2007_CELF.txt  Mirzasoleiman2013_Distributed_Submodular.txt  Nemhauser1978_Submodular_Maximization.txt  Wang2023_Fast_Space_Efficient_Parallel_Algorithms.txt
references_zh_md/: Barik2025_GreediRIS.zh.md  Chen2024_Scalable_Distributed_Algorithms.zh.md  Kempe2003_Influence_Maximization.zh.md  Leskovec2007_CELF.zh.md  Mirzasoleiman2013_Distributed_Submodular.zh.md  Nemhauser1978_Submodular_Maximization.zh.md  Wang2023_Fast_Space_Efficient_Parallel_Algorithms.zh.md
src/: __main__.py  algorithms.py  baselines.py  distributed.py  experiments.py  graphs.py  greedy.py  metrics.py  plotting.py  results.py  simulation.py
stages/Stage1_Background_Related_Work/: Stage1_Background_Related_Work.tex  Stage1_Background_Related_Work.zh.tex
stages/Stage2_Representative_Method_Selection/: Stage2_Representative_Method_Selection.tex  (+1 more)
tests/: test_algorithms.py  test_metrics.py
topic3_influence_maximization/: Proposal.tex  Proposal.zh.tex  Report.zh.tex
(+11 files in other folders)
