[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cs240-graph-partitioning"
version = "0.1.0"
description = "Graph partitioning experiments for communication-efficient distributed optimization."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "networkx>=3.3",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
